# img_effects_wasm

./: Cargo.toml  package.json  webpack.config.js
bundles/: index.js
public/: main.js
src/: lib.rs
