[package]
name = "img_effects_wasm"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib tells rust that the functions 
# are going to be called
# from other languages
crate-type = ["cdylib"]

[dependencies]


[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
